--- a/source/style.css
+++ b/source/style.css
@@ -52,7 +52,8 @@ body{
 .field-number-formatted{
     display: inline-block;
     font-weight: 400;
-    padding: 5px 10px 10px;
+    padding: 5px 10px 2px;
+    margin-bottom: 0px;
 }
 
 button{
